# Plan_A

./: .dockerignore  .env.example  .gitignore  Dockerfile  MCP_USAGE.md  MCP协议开发文档.md  README.md  TOOLS_REFACTOR_SUMMARY.md  alembic.ini  check_agent.py  debug_mcp_toggle.py  docker-compose.yml  nginx.conf  openai_test.py  pip.conf  pyproject.toml  test_agent_tools.py
backend/: CANVAS_BACKEND_DESIGN.md  CANVAS_IMPLEMENTATION_PLAN.md  CANVAS_STRUCTURE.md  __init__.py  create_db.py  init_mcp.py  main.py  set_admin.py
backend/api/: __init__.py  deps.py
backend/config/: tools_config.py  tools_manager.py
backend/core/: config.py  exceptions.py  response.py
backend/crud/: agent.py  base.py  chat.py  mcp_server.py  note_session.py  tool_call.py  user.py
backend/db/: session.py
backend/mcp/: __init__.py
backend/middlewares/: __init__.py  request_id.py
backend/migrations/: env.py
backend/models/: __init__.py  agent.py  base.py  chat.py  mcp_server.py  note.py  note_session.py  tool_call.py  user.py
backend/schemas/: agent.py  chat.py  common.py  mcp_server.py  note.py  tool_call.py  user.py
backend/services/: agent_service.py  chat.py  chat_response_service.py  chat_session_manager.py  chat_stream_service.py  chat_tool_handler.py  chat_tool_processor.py  mcp_service.py  memory.py  openai_client.py  redis_service.py  title_generator.py  tools.py  user.py
backend/templates/: user_manual.html
backend/utils/: check_timezone.py  id_converter.py  logging.py  random_util.py  (+3 more)
front/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+198 files in other folders)
